* Removed Unnecessary scrollbar and blank space in permissions list when viewing users permissions (Profile template, index.css, rtl.css, compat.css) [Bug 3874]
git-svn-id: https://devel.simplemachines.org/code/smf/trunk@9587 a96bbafc-d752-43aa-a6db-eed64a5f2cf9

--- a/Themes/default/css/index.css
+++ b/Themes/default/css/index.css
@@ -2984,15 +2984,16 @@ div#profile_success
 {
 	width: 40%;
 	float: left;
-	margin: 0 0 -500px;
-	padding: 1% 1% 500px;
+	line-height: 1.2em;
+	margin: 0;
+	padding: 1%;
 	clear: both;
 	border-top: 1px solid #fff;
 }
 
 #permissions dd
 {
-	width: 56%;
+	width: 50%;
 	float: left;
 	margin: 0;
 	padding: 1%;
