--- a/Themes/default/css/rtl.css
+++ b/Themes/default/css/rtl.css
@@ -814,8 +814,6 @@ tr.titlebg td
 #permissions dt
 {
 	float: right;
-	margin: 0 0 -500px;
-	padding: 1% 1% 500px;
 }
 
 #permissions dd
